--- a/static/scss/main.css
+++ b/static/scss/main.css
@@ -389,7 +389,7 @@ p, button, a {
   transform: rotate(-180deg); }
 
 .login-blurb {
-  height: 40rem;
+  min-height: 100%;
   background-color: #81aeaa;
   position: relative;
   top: 100%;
@@ -397,15 +397,10 @@ p, button, a {
   flex-direction: column;
   justify-content: center;
   align-items: center; }
-  @media (min-width: 375px) {
-    .login-blurb {
-      height: 46rem; } }
-  @media (min-width: 768px) {
-    .login-blurb {
-      height: 100vh; } }
 
 .login-blurb__container {
-  position: relative; }
+  position: relative;
+  margin: 5rem 0 5rem 0; }
 
 .logo-f {
   height: 4rem;
